<resources>
<string name="app_name">ItTrainingApp</string>
<string name="hello_world">Hello world!</string>
<string name="action_settings">Settings</string>
<string name="title_activity_selection_list">SelectionList</string>
<string name="title_activity_modify_student">ModifyStudent</string>
<string name="title_activity_modify_teacher">Modify_teacher</string>
<string name="title_activity_test_fragment">testFragment</string>
<string name="action_modify">Modifier</string>
<string name="action_delete">Supprimer</string>
<string name="parametre">Paramètre</string>
<string name="theme">Thème</string>
<string name="pref_summary">Define your preferred language</string>
<string name="pref_select_language">Select your language</string>
    <string name="langue">Langue</string>
    <string name="police">Taille de police</string>
    <string name="add_teacher">add teacher</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="next_session">PROCHAINE SESSION</string>
    <string name="attr_teacher">Attribuer un enseignant</string>
    <string name="act_save">Enregistrer</string>
    <string name="in_charge">In charge</string>
    <string name="not_in_charge">Unconcerned</string>
    <string name="manage_teacher">Manage teacher</string>
    <string name="show_teacher">show teacher</string>
    <string name="firstname">Firstname</string>
    <string name="mail">Mail</string>
    <string name="modify_teacher">Modify teacher</string>
    <string name="select_one_student">select on student</string>
    <string name="add_student">add Student</string>
    <string name="manage_cours">manage cours</string>
    <string name="detail_student">Detail Student</string>
    <string name="choose_cours">choose cours</string>
    <string name="modify_cours">Modify cours</string>
    <string name="show_cours">show cours</string>
    <string name="select_teacher">Select teacher</string>
    <string name="manage_session">Manage session</string>
    <string name="modify_session">Modify session</string>
    <string name="add_cours">add Cours</string>
    <string name="add_new_sesion">add new session</string>
    <string name="error_message_room">an error has occured when charging available room, reperfom opération</string>
    <string name="no_room_period">no room available for the selected period</string>
    <string name="no_room_selected">no room selected</string>
    <string name="no_save">"Unable to save: "</string>
    <string name="select_room">Select room</string>
</resources>