<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/act_cours_modify_nameTxtBx"
        android:layout_column="0"
        style="@style/TextField"/>

     <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/act_cours_modify_descTxtBx"
         android:hint="@string/description"
         style="@style/TextField"/>
    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/act_save"
            android:id="@+id/act_cours_modify_saveButton" />
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/action_delete"
            android:id="@+id/act_cours_modify_deleteButton" />
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/attr_teacher"
            android:id="@+id/act_cours_modify_atributeTeacherButton"/>
        </LinearLayout>


</LinearLayout>
