<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:visible="true"/>

    <item android:id="@+id/action_modify"
        android:title="@string/action_modify"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:visible="false"/>

    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_trash"
        android:showAsAction="never"
        android:visible="false"/>
</menu>
