<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.cours644_1.maa_bom.ittrainingapp.Modify_teacher">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/act_teacher_modify_nameTxtBx"
            android:layout_column="0"
            style="@style/TextField"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstname"
            android:ems="10"
            android:id="@+id/act_teacher_modify_firstNameTxtBx"
            android:layout_column="0"
            style="@style/TextField"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/act_teacher_modify_mailTxtBx"
            android:layout_column="0"
            android:hint="@string/mail"
            style="@style/TextField"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/act_teacher_modify_descTxtBx"
            android:hint="@string/description"
            style="@style/TextField"/>
    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/act_save"
            android:id="@+id/act_teacher_modify_saveButton" />
        <Button
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/action_delete"
            android:id="@+id/act_teacher_modify_deleteButton"/>
        </LinearLayout>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView2"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>
